--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Krulens music</title>
+    <title>Krulen's music</title>
   </head>
   <body>
-    <h1>Krulens Music</h1>
+    <h1>Krulen's Music</h1>
 
     <div class="music-container" id="music-container">
       <div class="music-info">
