profile pic added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <title>Krulen's music</title>
   </head>
   <body>
+    <div class="profile-name">
+    <div class="profile-img">
+      <img src="images/kruens.JPG" alt="profile">
+    </div>
     <h1>Krulen's Music</h1>
+    </div>
 
     <div class="music-container" id="music-container">
       <div class="music-info">
@@ -22,10 +27,10 @@
         </div>
       </div>
 
-      <audio src="music/ukulele.mp3" id="audio"></audio>
+      <audio src="music/James Bay - Us.mp3" id="audio"></audio>
 
       <div class="img-container">
-        <img src="images/ukulele.jpg" alt="music-cover" id="cover" />
+        <img src="images/James Bay - Us.jpg" alt="music-cover" id="cover" />
       </div>
       <div class="navigation">
         <button id="prev" class="action-btn">
